# OnlineUserManagementSystem

./: .gitignore  Dockerfile  MANIFEST.in  angel.txt  manage.py  readme.md  requirements.txt  requirements_prod.txt  setup.cfg
HRM/: api.py  serializers.py  urls.py  views.py
HRM/migrations/: 0002_auto_20210115_2323.py
restWebsite/: asgi.py  settings.py  urls.py  wsgi.py
restWebsite/HRM/: admin.py  models.py  urls.py  views.py
restWebsite/HRM/migrations/: 0001_initial.py
